# rallyd

./: .gitignore  Dockerfile  README.md  haproxy.cfg.sample  rallyd-client.py  rallyd.py  requirements.txt  start.sh
rallyd/: Dockerfile  README.md  rallyd.py  setup.cfg  setup.py
rallyd-client/: README.md  rallyd-client.py  rallyd_cli.py  rallyd_client.py  setup.cfg  setup.py
