[metadata]
name = rallyd-client
summary = Client for HTTP API for Rally Benchmark System for OpenStack
description-file =
    README.md
author = Mirantis
author-email = dkalashnik@mirantis.com
home-page = http://www.mirantis.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    rallyd_clinet.py
scripts =
    rallyd_cli.py

[entry_points]
console_scripts =
    rallyd_cli = rallyd_cli:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
